--- a/Akka.Net-Examples.csproj
+++ b/Akka.Net-Examples.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Akka.Net_Examples</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.4.25" />
+  </ItemGroup>
+
 </Project>
